# nanors

./: .env  .gitignore  .sea-orm-cli.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  STRUCTURED_MEMORY_PLAN.md  build_android.sh  config.json  debug.sh  fix.sh  plan_telegram_integration.md
app/: Cargo.toml
app/src/: main.rs
app/src/command/: agent.rs  chat.rs  info.rs  init.rs  mod.rs  telegram.rs  version.rs
docs/: GOCLAW_MIGRATION_GUIDE.md  KEYWORD_VERSIONING.md  MIGRATION_ANALYSIS.md  static-dispatch-refactor-guide.md
migrations/: 001_create_memory_tables.sql  002_create_sessions_table.sql  003_add_versioning_and_graph.sql  004_add_keyword_versioning.sql  005_remove_keyword_versioning.sql  006_remove_unused_tables.sql  007_remove_version_fields.sql  008_remove_unused_tables.sql  009_remove_resource_id.sql  010_add_structured_memory.sql  011_add_enrichment_tracking.sql  012_remove_query_expansions.sql
nanors_config/: Cargo.toml
nanors_config/src/: lib.rs  schema.rs
nanors_conversation/: Cargo.toml
nanors_conversation/src/: history.rs  lib.rs  manager.rs  session.rs
nanors_core/: Cargo.toml
nanors_core/src/: lib.rs  util.rs
nanors_core/src/agent/: agent_loop.rs  mod.rs
nanors_core/src/conversation/: mod.rs
nanors_core/src/memory/: card.rs  graph.rs  graph_repository.rs  keyword_versioning.rs  mod.rs  query_planner.rs  repository.rs  types.rs
nanors_core/src/retrieval/: adaptive.rs  compression.rs  mod.rs  sufficiency.rs
nanors_core/src/tools/: base.rs  mod.rs  registry.rs
nanors_entities/: Cargo.toml
nanors_entities/src/: category_items.rs  enrichment_records.rs  lib.rs  memory_card_versions.rs  memory_cards.rs  memory_categories.rs  memory_item_versions.rs  memory_items.rs  mod.rs  prelude.rs  query_expansions.rs  resources.rs  sessions.rs
nanors_memory/: Cargo.toml
nanors_memory/src/: compression.rs  convert.rs  dedup.rs  lib.rs  manager.rs  retrieval.rs  scoring.rs  session.rs  temporal_impl.rs
nanors_memory/src/enrichment/: manifest.rs  mod.rs
nanors_memory/src/extraction/: cards.rs  engine.rs  mod.rs  patterns.rs
nanors_memory/src/query/: detector.rs  expander.rs  mod.rs
nanors_memory/src/rerank/: mod.rs
nanors_memory/src/schema/: mod.rs
nanors_memory/src/search/: mod.rs
nanors_memory/src/storage/: mod.rs
nanors_memory/src/temporal/: mod.rs
nanors_memory/tests/: integration_enrichment.rs  integration_reranker.rs  integration_schema.rs  integration_structured_memory.rs  integration_temporal.rs
nanors_providers/: Cargo.toml
nanors_providers/src/: lib.rs  retry.rs  zhipu.rs
nanors_session/: Cargo.toml
nanors_session/src/: lib.rs  manager.rs
nanors_session/src/entity/: mod.rs  sessions.rs
nanors_telegram/: Cargo.toml
nanors_telegram/src/: bot.rs  command.rs  error.rs  handler.rs  lib.rs
nanors_tools/: Cargo.toml
nanors_tools/src/: apply_patch.rs  bash.rs  command_runner.rs  edit_file.rs  glob.rs  grep.rs  lib.rs  path_guard.rs  read_file.rs  web_fetch.rs  write_file.rs
tests/: integration_structured_memory.rs  keyword_versioning_test.rs
