[workspace]
members = [
  "app",
  "nanors_core",
  "nanors_providers",
  "nanors_config",
  "nanors_entities",
  "nanors_memory",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
nanors_core = { path = "nanors_core" }
nanors_providers = { path = "nanors_providers" }
nanors_config = { path = "nanors_config" }
nanors_entities = { path = "nanors_entities" }
nanors_memory = { path = "nanors_memory" }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
thiserror = "2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "local-time",
  "env-filter",
] }
async-trait = "0.1.89"
sea-orm = { version = "2.0.0-rc.30", features = [
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "with-chrono",
  "debug-print",
  "macros",
  "with-uuid",
  "with-json",
] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
uuid = { version = "1.20.0", features = ["v7", "serde", "fast-rng"] }
sha2 = "0.10"
regex = "1.11"
rayon = "1.10"
once_cell = "1.21"

[profile.dev]
debug = true
debug-assertions = true
panic = "abort"
incremental = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "thin"
opt-level = 2
strip = true
debug = 0
debug-assertions = false
incremental = false
panic = "abort"
