[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
nanors_core.workspace = true
nanors_providers.workspace = true
nanors_session.workspace = true
nanors_config.workspace = true

clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true

[[bin]]
name = "nanobot"
path = "src/main.rs"
