[package]
name = "nanors_config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
nanors_core.workspace = true

serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
anyhow.workspace = true
tracing.workspace = true
