[package]
name = "nanors_conversation"
version.workspace = true
edition.workspace = true

[dependencies]
nanors_core.workspace = true
nanors_providers.workspace = true
nanors_memory.workspace = true

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
