[package]
name = "nanors_memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
nanors_core.workspace = true
nanors_entities.workspace = true

sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
sha2.workspace = true
rayon.workspace = true

[dev-dependencies]
tokio.workspace = true
