[package]
name = "nanors_providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
nanors_core.workspace = true

serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
reqwest.workspace = true
anyhow.workspace = true
tracing.workspace = true
