[package]
name = "nanors_telegram"
version.workspace = true
edition.workspace = true

[dependencies]
nanors_core = { workspace = true }
nanors_providers = { workspace = true }
nanors_config = { workspace = true }
nanors_memory = { workspace = true }
nanors_conversation = { workspace = true }

teloxide = { version = "0.17", features = ["macros", "ctrlc_handler"] }
dptree = "0.3"

tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
