[package]
name = "nanors_tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
regex.workspace = true
uuid.workspace = true
glob = "0.3"

[lints]
workspace = true
